--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -1,8 +1,7 @@
-body{
-    font-family: 'Poppins', sans-serif !important;
-}
+body{font-family: 'Poppins', sans-serif !important;}
+a:hover {text-decoration: none !important;}
 
-/* ------------------------ index ------------------------ */
+/* ------------------------ navbar ------------------------ */
 
 .fixed-top .form-control {border: 1px solid white !important; height: 2em !important;}
 
@@ -13,17 +12,23 @@ body{
 .main-nav .bg-dark {background-color: black !important;}
 
 .main_nav a{color:#adb5bd !important;}
+.main_nav a:hover{color:#9a9c9e !important;}
 
 .fixed-top{padding: .25rem 1rem !important;}
 
+.index-cover .navbar-toggler {color: white !important;}
+
+.fixed-top .form-control {border-radius: 0;}
+
+.fixed-top .btn-outline-success {border-radius: 0;}
+
+/* ------------------------------- index cover------------------------------ */
 .index-cover{
     min-height: 100vh;
     background: url(../img/background.png) no-repeat center;
     background-size: cover;
     
 }
-
-.index-cover .navbar-toggler {color: white !important;}
 
 .index-container {
     max-width: 750px  !important;
@@ -48,7 +53,20 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
 
 .main-logos {padding-top: 17px; text-align: center;}
 
-.post-list{margin-top: -35px; width: 76% !important;}
+.post-list{margin-top: -53px; width: 76% !important;}
+
+.post-list a:hover{color: #94651E;}
+
+.card-index .tags {text-align: center; margin-bottom: 15px;}
+
+.card-index .tags a{
+    border: 1.5px solid #DD9933;
+    padding: 0 4px;
+    border-radius: 5px;
+    font-size: 13px;
+    font-weight: 600;
+    color: #DD9933 !important;
+}
 
 .card-title {color: black; font-size: 24.5px; margin-top: 7px !important; text-align: center;}
 .card-title a{color: black;}
@@ -56,7 +74,7 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
 .card-text {text-align: center;}
 .card-paragraph{text-align: initial;}
 
-.card-body {padding: 1.5rem !important;}
+.card-body {padding: 1rem 1.5rem !important;}
 
 .card-body .post-image {height: 40%; margin-bottom: 20px;}
 
@@ -71,6 +89,7 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
 .card-last {position: relative; bottom: -20px;}
 
 .card-button{padding: 24px;}
+
 .card-button button{
     color: white;
     font-size: 14px;
@@ -81,6 +100,8 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
     min-width: 180px;
 }
 
+.card-button button:hover{color: #DD9933}
+
 .card-author {
     color: black !important;
     font-size: small;
@@ -88,6 +109,16 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
 }
 
 .post-container{ border-bottom: 0.5px solid grey;}
+
+/* --------------  Detail Post  ----------------*/
+
+.post-detail {margin-top: 70px; width: 70% !important;}
+
+.post-detail .card-index {height: initial;}
+
+.post-detail .post-image {height: 250px;}
+
+.post-detail .post-image img {display: block; margin: 0 auto; object-fit: contain;}
 
 /* --------------  Related Post ----------------*/
 
@@ -114,7 +145,7 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
     border-top: 0.8px solid rgb(234, 234, 234) !important;
 }
 
-.card-footer a{font-size: 13px;}
+.card-footer a{font-size: 13px; color: #DD9933;}
 
 /* --------------Comments Social icons section ----------------*/
 
