--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -38,6 +38,11 @@
             <div class="col mb-4">
                 <div class="card card-index">
                     <div class="card-body">
+                        <div class="tags">
+                            {% for tag in post.tags.all %}
+                                <a href="">{{tag}}</a>
+                            {% endfor %}
+                        </div>
                         <h5 class="card-title"><a href="{{ post.get_absolute_url }}">{{post.title|capfirst}}</a></h5>
                         {% comment %} DATE FORMATS: https://docs.djangoproject.com/en/3.0/ref/templates/builtins/#date {% endcomment %}
                         <p class="card-text"><small class="text-muted">{{post.publish|date:"F j, Y - G:i"}}</small></p>
