--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -57,6 +57,8 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
 
 .post-list a:hover{color: #94651E;}
 
+.tag-filter {font-size: 1.7em; color: #ae7826; margin-bottom: 19px; margin-top: 120px;}
+
 .card-index .tags {text-align: center; margin-bottom: 15px;}
 
 .card-index .tags a{
