--- a/static/global/css/style.css
+++ b/static/global/css/style.css
@@ -1,3 +1,4 @@
-body {font-family: 'Roboto', sans-serif !important;}
+body{font-family: 'Poppins', sans-serif !important;}
+a:hover {text-decoration: none !important;}
 
 
