--- a/blog/static/blog/css/style.css
+++ b/blog/static/blog/css/style.css
@@ -199,3 +199,5 @@ img[alt="image-profile"] {height: 120px; border-radius: 50%; border: 4px solid w
 }
 
 .comment-body{ padding-bottom: 16px;}
+
+.comment-response {padding-left: 90px;}
